# LLM_Agents

./: .gitignore  README.md  pyproject.toml
data/scenarios/: arnhemdreijenseweg.md
testing/: Smolagents_Examples.ipynb  create_profile.py  create_profile_llamaindex.py  create_profile_llamaindex_oa.py  dummy_agent_library.ipynb  google_gemma_example.py  mistral_example.py  results.md  tools.py
