[project]
name = "llm-agents"
version = "0.1.0"
description = "HuggingFace course on LLM Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub[hf-xet]>=0.32.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-huggingface-api>=0.5.0",
    "openai>=1.75.0",
    "smolagents[transformers]>=1.17.0",
    "torch>=2.7.0",
    "transformers[torch]>=4.51.3",
]


[tool.uv.sources]
torch = [
    {index="pytorch-cu126"}
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "duckduckgo-search>=8.0.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "litellm[proxy]>=1.68.0",
]
